--- a/app.json
+++ b/app.json
@@ -1,10 +1,15 @@
 {
   "expo": {
-    "name": "ToDoAppp",
-    "slug": "ToDoAppp",
+    "name": "ToDoApp",
+    "slug": "ToDoApp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/splash-happyface.png",
+    "splash": {
+      "image": "./assets/images/splash-happyface.png",
+      "resizeMode": "cover",
+      "backgroundColor": "#FFEB8D"
+    },
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -22,18 +27,7 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
-        }
-      ]
-    ],
+    "plugins": ["expo-router"],
     "experiments": {
       "typedRoutes": true
     }
