--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "react": "18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-calendar-strip": "^2.2.6",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
