--- a/data/tasks.json
+++ b/data/tasks.json
@@ -3,7 +3,7 @@
     "id": 1,
     "name": "Buy groceries",
     "description": "Purchase ingredients for the week.",
-    "dueDate": "2025-01-20T10:00:00Z",
+    "dueDate": "2025-01-27",
     "priority": "high",
     "category": "house",
     "status": "to do"
@@ -12,7 +12,7 @@
     "id": 2,
     "name": "Finish project report",
     "description": "Complete and submit the final report for the work project.",
-    "dueDate": "2025-01-18T17:00:00Z",
+    "dueDate": "2025-01-27",
     "priority": "high",
     "category": "work",
     "status": "in progress"
@@ -21,7 +21,7 @@
     "id": 3,
     "name": "Morning workout",
     "description": "Do a 30-minute cardio workout.",
-    "dueDate": "2025-01-16T07:00:00Z",
+    "dueDate": "2025-01-27",
     "priority": "medium",
     "category": "exercise",
     "status": "done"
@@ -30,7 +30,7 @@
     "id": 4,
     "name": "Call mom",
     "description": "Give my mom a call to check in and catch up.",
-    "dueDate": "2025-01-17T18:00:00Z",
+    "dueDate": "2025-01-27",
     "priority": "medium",
     "category": "personal",
     "status": "to do"
@@ -39,7 +39,7 @@
     "id": 5,
     "name": "Clean the house",
     "description": "Vacuum, mop, and organize the living room and kitchen.",
-    "dueDate": "2025-01-20T14:00:00Z",
+    "dueDate": "2025-01-28",
     "priority": "low",
     "category": "house",
     "status": "in progress"
@@ -48,7 +48,7 @@
     "id": 6,
     "name": "Prepare presentation for meeting",
     "description": "Create slides and prepare talking points for Monday's meeting.",
-    "dueDate": "2025-01-19T16:00:00Z",
+    "dueDate": "2025-01-29",
     "priority": "high",
     "category": "work",
     "status": "to do"
@@ -57,7 +57,7 @@
     "id": 7,
     "name": "Buy birthday gift",
     "description": "Get a gift for Sarah's birthday on January 21st.",
-    "dueDate": "2025-01-20T12:00:00Z",
+    "dueDate": "2025-01-27",
     "priority": "medium",
     "category": "personal",
     "status": "done"
@@ -66,7 +66,7 @@
     "id": 8,
     "name": "Schedule doctor's appointment",
     "description": "Make an appointment for a routine check-up.",
-    "dueDate": "2025-01-22T09:00:00Z",
+    "dueDate": "2025-01-28",
     "priority": "medium",
     "category": "personal",
     "status": "to do"
@@ -75,16 +75,16 @@
     "id": 9,
     "name": "Submit tax documents",
     "description": "Submit the necessary tax documents to the accountant.",
-    "dueDate": "2025-01-25T17:00:00Z",
+    "dueDate": "2025-01-29",
     "priority": "high",
     "category": "work",
-    "status": "to do"
+    "status": "in progress"
   },
   {
     "id": 10,
     "name": "Finish reading book",
     "description": "Complete reading 'Atomic Habits' by James Clear.",
-    "dueDate": "2025-01-30T20:00:00Z",
+    "dueDate": "2025-01-27",
     "priority": "low",
     "category": "personal",
     "status": "in progress"
@@ -93,7 +93,7 @@
     "id": 11,
     "name": "Clean car",
     "description": "Wash and vacuum the car.",
-    "dueDate": "2025-01-22T11:00:00Z",
+    "dueDate": "2025-01-27",
     "priority": "medium",
     "category": "house",
     "status": "to do"
@@ -102,7 +102,7 @@
     "id": 12,
     "name": "Grocery shopping for the week",
     "description": "Buy weekly groceries for the house.",
-    "dueDate": "2025-01-23T10:00:00Z",
+    "dueDate": "2025-01-27",
     "priority": "high",
     "category": "house",
     "status": "to do"
@@ -111,7 +111,7 @@
     "id": 13,
     "name": "Complete work email follow-up",
     "description": "Send follow-up emails to clients about the recent project.",
-    "dueDate": "2025-01-17T15:00:00Z",
+    "dueDate": "2025-01-28",
     "priority": "medium",
     "category": "work",
     "status": "done"
@@ -120,7 +120,7 @@
     "id": 14,
     "name": "Take vitamins",
     "description": "Take daily vitamins and supplements.",
-    "dueDate": "2025-01-16T08:00:00Z",
+    "dueDate": "2025-01-27",
     "priority": "low",
     "category": "personal",
     "status": "done"
@@ -129,7 +129,7 @@
     "id": 15,
     "name": "Check work email",
     "description": "Go through new work emails and respond to urgent ones.",
-    "dueDate": "2025-01-16T10:00:00Z",
+    "dueDate": "2025-01-29",
     "priority": "medium",
     "category": "work",
     "status": "to do"
@@ -138,7 +138,7 @@
     "id": 16,
     "name": "Pick up dry cleaning",
     "description": "Go to the dry cleaner to pick up the clothes.",
-    "dueDate": "2025-01-18T14:00:00Z",
+    "dueDate": "2025-01-27",
     "priority": "low",
     "category": "house",
     "status": "to do"
@@ -147,7 +147,7 @@
     "id": 17,
     "name": "Plan weekend getaway",
     "description": "Organize travel plans for a weekend trip.",
-    "dueDate": "2025-01-21T09:00:00Z",
+    "dueDate": "2025-01-29",
     "priority": "low",
     "category": "personal",
     "status": "to do"
@@ -156,7 +156,7 @@
     "id": 18,
     "name": "Organize home office",
     "description": "Tidy up the home office, organize papers and files.",
-    "dueDate": "2025-01-24T12:00:00Z",
+    "dueDate": "2025-01-28",
     "priority": "medium",
     "category": "house",
     "status": "in progress"
@@ -165,7 +165,7 @@
     "id": 19,
     "name": "Complete workout routine",
     "description": "Finish the full 45-minute workout.",
-    "dueDate": "2025-01-17T06:00:00Z",
+    "dueDate": "2025-01-27",
     "priority": "high",
     "category": "exercise",
     "status": "done"
@@ -174,7 +174,7 @@
     "id": 20,
     "name": "Write blog post",
     "description": "Write a new blog post about productivity tips.",
-    "dueDate": "2025-01-19T13:00:00Z",
+    "dueDate": "2025-01-28",
     "priority": "medium",
     "category": "work",
     "status": "to do"
