--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "expo": "~52.0.24",
     "expo-app-loading": "^2.1.1",
