BackIcon test added, coverage all files added in package json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "lint": "expo lint"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "!**/node_modules/**",
+      "!**/coverage/**"
+    ]
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
